--- a/styling.css
+++ b/styling.css
@@ -1,6 +1,133 @@
+body{
+    font-family:'Pangolin', cursive;
+}
+
+
+
+
 video#bgvedio{
     position: fixed;
     min-width: 100%;
     min-height: 100%;
     z-index: -100;
 }
+
+/* STYLING NAVIGATION BAR */
+.navbar-custom {
+
+    font-size: 28px;
+    background-color: #5d734b;
+    border-color: #4d5f3e;
+    background-image: -webkit-gradient(linear, left 0%, left 100%, from(#76925f), to(#5d734b));
+    background-image: -webkit-linear-gradient(top, #76925f, 0%, #5d734b, 100%);
+    background-image: -moz-linear-gradient(top, #76925f 0%, #5d734b 100%);
+    background-image: linear-gradient(to bottom, #76925f 0%, #5d734b 100%);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff76925f', endColorstr='#ff5d734b', GradientType=0);
+  }
+  .navbar-custom .navbar-brand {
+    color:white;
+    font-size: 28px;
+  }
+  .navbar-custom .navbar-brand:hover,
+  .navbar-custom .navbar-brand:focus {
+    color: white;
+    background-color: transparent;
+    cursor: pointer;
+  }
+  .navbar-custom .navbar-text {
+    color: #171f10;
+  }
+  .navbar-custom .navbar-nav > li:last-child > a {
+    border-right: 1px solid #4d5f3e;
+  }
+  .navbar-custom .navbar-nav > li > a {
+    color: #171f10;
+    border-left: 1px solid #4d5f3e;
+  }
+  .navbar-custom .navbar-nav > li > a:hover,
+  .navbar-custom .navbar-nav > li > a:focus {
+    color: #fff9f9;
+    background-color: transparent;
+  }
+  .navbar-custom .navbar-nav > .active > a,
+  .navbar-custom .navbar-nav > .active > a:hover,
+  .navbar-custom .navbar-nav > .active > a:focus {
+    color: #fff9f9;
+    background-color: #4d5f3e;
+    background-image: -webkit-gradient(linear, left 0%, left 100%, from(#4d5f3e), to(#667e52));
+    background-image: -webkit-linear-gradient(top, #4d5f3e, 0%, #667e52, 100%);
+    background-image: -moz-linear-gradient(top, #4d5f3e 0%, #667e52 100%);
+    background-image: linear-gradient(to bottom, #4d5f3e 0%, #667e52 100%);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff4d5f3e', endColorstr='#ff667e52', GradientType=0);
+  }
+  .navbar-custom .navbar-nav > .disabled > a,
+  .navbar-custom .navbar-nav > .disabled > a:hover,
+  .navbar-custom .navbar-nav > .disabled > a:focus {
+    color: #cccccc;
+    background-color: transparent;
+  }
+  .navbar-custom .navbar-toggle {
+    border-color: #dddddd;
+  }
+  .navbar-custom .navbar-toggle:hover,
+  .navbar-custom .navbar-toggle:focus {
+    background-color: #dddddd;
+  }
+  .navbar-custom .navbar-toggle .icon-bar {
+    background-color: #cccccc;
+  }
+  .navbar-custom .navbar-collapse,
+  .navbar-custom .navbar-form {
+    border-color: #4c5d3d;
+  }
+  .navbar-custom .navbar-nav > .dropdown > a:hover .caret,
+  .navbar-custom .navbar-nav > .dropdown > a:focus .caret {
+    border-top-color: #fff9f9;
+    border-bottom-color: #fff9f9;
+  }
+  .navbar-custom .navbar-nav > .open > a,
+  .navbar-custom .navbar-nav > .open > a:hover,
+  .navbar-custom .navbar-nav > .open > a:focus {
+    background-color: #4d5f3e;
+    color: #fff9f9;
+  }
+  .navbar-custom .navbar-nav > .open > a .caret,
+  .navbar-custom .navbar-nav > .open > a:hover .caret,
+  .navbar-custom .navbar-nav > .open > a:focus .caret {
+    border-top-color: #fff9f9;
+    border-bottom-color: #fff9f9;
+  }
+  .navbar-custom .navbar-nav > .dropdown > a .caret {
+    border-top-color: #171f10;
+    border-bottom-color: #171f10;
+  }
+  @media (max-width: 767) {
+    .navbar-custom .navbar-nav .open .dropdown-menu > li > a {
+      color: #171f10;
+    }
+    .navbar-custom .navbar-nav .open .dropdown-menu > li > a:hover,
+    .navbar-custom .navbar-nav .open .dropdown-menu > li > a:focus {
+      color: #fff9f9;
+      background-color: transparent;
+    }
+    .navbar-custom .navbar-nav .open .dropdown-menu > .active > a,
+    .navbar-custom .navbar-nav .open .dropdown-menu > .active > a:hover,
+    .navbar-custom .navbar-nav .open .dropdown-menu > .active > a:focus {
+      color: #fff9f9;
+      background-color: #4d5f3e;
+    }
+    .navbar-custom .navbar-nav .open .dropdown-menu > .disabled > a,
+    .navbar-custom .navbar-nav .open .dropdown-menu > .disabled > a:hover,
+    .navbar-custom .navbar-nav .open .dropdown-menu > .disabled > a:focus {
+      color: #cccccc;
+      background-color: transparent;
+    }
+  }
+  .navbar-custom .navbar-link {
+    color: #171f10;
+  }
+  .navbar-custom .navbar-link:hover {
+    color: #fff9f9;
+  }
